refresh tables on rename variables, fixed text-overflow int tables, scroll for many vars in veriable editor

--- a/src/bma.client/css/StyleSheet.less
+++ b/src/bma.client/css/StyleSheet.less
@@ -1367,17 +1367,29 @@ body {
                                 border-bottom-color: @lightgrey;
                             }
                         }
+
+                        & >  div {
+                          left: 0;
+                          background-color: inherit;
+                          width: 100%;
+                          overflow: hidden;
+                          position: absolute;
+                          border-radius: 0 0 15px 15px;
+                        }
                     }
                     li.var-button{
                         position: relative;
                     }
             }
+            
 
             .inputs-list-content {
-                            position: absolute;
-                            width: 100%;
+                            //position: absolute;
+                            //width: 100%;
                             padding-bottom: 5px;
-                            overflow: hidden;
+                            overflow-x: hidden;
+                            overflow-y: scroll;
+                            max-height: 100px;
                             z-index: 3;
                             left: 0;
                             top: 22px;
@@ -1391,7 +1403,11 @@ body {
                                     color: darken(@font-color-hover,30%);
                                 }
                             }
+                            &::-webkit-scrollbar, &::-webkit-scrollbar-track {
+                                background-color: transparent;
+                            }
                         }
+           
 
 			.operators{
                 ul {
@@ -1565,6 +1581,11 @@ body {
 				width: 99%;
 				border-collapse: collapse;
 				.default-text;
+                td {
+                    max-width: 200px;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                }
 			}
 
         // Default BMA Tables
@@ -1578,6 +1599,8 @@ body {
 			    padding: 1px 3px 1px 3px;
 			    color: @darkgrey;
 			    height: 20px;
+                overflow: hidden;
+                text-overflow: ellipsis;
 		    }
 
             tr:first-child td {
